# python-overlay

./: .gitignore  README.md  clickthrough.spec  main.spec  overlay.spec  pyproject.toml  timer.spec  workspace.code-workspace
app/: clickthrough-vlc.py  clickthrough.py  config.py  main.py  timer.py  trayicon.py
